# bot1

./: .flake8  .gitignore  .markdownlint.json  .markdownlintignore  DEPLOY.md  MONITORING.md  README.md  SECURITY_TOKEN_LEAK_FIXED.md  activate_and_run.sh  analyze_dead_code.py  bot-monitor.service  monitor_control.sh  pyproject.toml  pyrightconfig.json  requirements.txt  setup_monitoring.sh  telegram-bot.service
.plan/: todo.json
Tests/: analyze_attachment_issue.py  analyze_webhook_issue_key_problem.py  comprehensive_diagnosis.py  conftest.py  debug_webhook.py  final_verification.py  focused_file_diagnostics.py  network_diagnostics.py  real_time_webhook_monitor.py  simple_network_diagnostics.py
backups/: BACKUP_INFO.md  BACKUP_INFO_20251009_POST_WEBHOOK_FIX.md  BACKUP_INFO_20251117_SECURITY_FIXES.md  BACKUP_INFO_FINAL.md  BACKUP_INFO_FINAL_SYSTEM_AUGUST_2025.md  BACKUP_INFO_FIX_JULY.md  BACKUP_INFO_ORGANIZED_SYSTEM_SEPTEMBER_2025.md  BACKUP_INFO_POST_API_FIX_VERIFIED_20251001.md  BACKUP_INFO_POST_COMMENT_FIX_20250723.md  BACKUP_INFO_PRE_API_FIX_20251001.md  QUICK_BACKUP_INFO.md  README.md  create_secure_backup.sh
config/: config.py  credentials.env.template  field_values.json  fields_mapping.yaml
deployment/: DEPLOYMENT_GUIDE.md  DEPLOYMENT_INDEX.md  DEPLOYMENT_README.md  DOMAIN_SSL_SETUP.md  QUICK_DEPLOY.md  README.md  SYSTEM_ORGANIZATION_SUMMARY.md  auto_deploy.sh  deployment_checklist.md
docs/: LOGS_DOCUMENTATION.md
monitoring/: MONITORING_README.md  README.md  ZABBIX_AUTO_SETUP_README.md  ZABBIX_QUICK_START.md  ZABBIX_SETUP_GUIDE.md  bot-monitor.service  monitor_bot.sh  monitor_control.sh  setup_monitoring.sh  zabbix_auto_setup.sh
reports/: 2025-06-23_PYLANCE_FIXES_REPORT.md  2025-06-28_AUTHOR_NAME_HEADER_IMPLEMENTATION.md  2025-06-28_BACKUP_POST_RESTART_20250628.md  2025-06-28_CONVERSATION_HANDLER_FIX_COMPLETE_REPORT.md  2025-06-28_CONVERSATION_HANDLER_FIX_REPORT.md  2025-06-28_FINAL_AUTHOR_HEADER_FIX.md  2025-06-29_FINAL_BOT_STATUS_WITH_FILE_LINKS.md  2025-06-29_JIRA_API_V2_FILE_LINKS_FIX.md  2025-06-30_AUTHORIZATION_LOGIC_FIX_REPORT.md  2025-06-30_AUTH_CONFLICT_FIX.md  2025-07-01_EXPANDED_REGISTRATION_FLOW_IMPLEMENTATION.md  2025-07-01_REGISTRATION_FLOW_DIAGNOSTICS.md  2025-07-01_SIMPLIFIED_AUTHORIZATION_FLOW_REPORT.md  2025-07-01_SIMPLIFIED_AUTH_IMPLEMENTATION_FINAL.md  2025-07-03_REQUIREMENTS_COMPARISON_ANALYSIS.md  2025-07-04_CONVERSATION_HANDLER_USER_FIX_COMPLETE.md  2025-07-08_EXCEL_FILES_FIX_COMPLETE.md  2025-07-09_EXCEL_FILES_FIX_COMPLETE_FINAL.md  2025-07-09_EXCEL_FIX_DOCUMENTATION_INDEX.md  2025-07-11_ENHANCED_CACHING_FIX_COMPLETE.md  2025-07-11_PHOTO_ANALYSIS_FINAL_REPORT.md  2025-07-12_FINAL_DIAGNOSTIC_REPORT.md  2025-07-20_COMPLETE_FILE_FORWARDING_SIMPLIFICATION_20250720.md  2025-07-20_CRITICAL_SPAM_FIX_20250720.md  2025-07-20_FILE_FORWARDING_SIMPLIFICATION_20250720.md  2025-07-20_LOG_ROTATION_AND_FIXES_SUMMARY_20250720.md  2025-07-21_ENHANCED_PHONE_VALIDATION_REPORT.md  2025-07-21_FILE_LOSS_FIX_COMPLETE_20250721.md  2025-07-21_FINAL_REGISTRATION_AND_FILE_HANDLING_FIX_REPORT.md  2025-07-21_VIDEO_FILE_SUPPORT_FIX_20250720.md  2025-09-08_BOT_RESTORATION_SUCCESS.md  2025-09-08_FILE_ORGANIZATION_REPORT.md  2025-09-08_GITHUB_PUSH_SUCCESS_SEPTEMBER_2025.md  2025-09-08_REPORTS_REORGANIZATION_COMPLETE.md  2025-09-08_SECURITY_REMEDIATION_COMPLETE.md  2025-09-09_DEPLOYMENT_DOCUMENTATION_UPDATE.md  2025-09-09_FINAL_BACKUP_AND_GIT_SYNCHRONIZATION.md  (+72 more)
(+65 files in other folders)
