[tool.pyright]
include = ["src", "config", "utils", "Tests", "scripts", "monitoring", "user_states"]
exclude = [
    "**/__pycache__",
    "logs/**",
    "venv/**",
    "backups/**",
    "reports/**",
    "deployment/**",
    ".git/**",
    ".vscode/**"
]
reportMissingImports = "warning"
reportMissingTypeStubs = "none"
reportUnknownMemberType = "none"
reportGeneralTypeIssues = "warning"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportAttributeAccessIssue = "none"
reportOptionalMemberAccess = "none"
reportOptionalSubscript = "none"
reportOptionalOperand = "none"
reportOptionalCall = "none"
reportOptionalIterable = "none"
reportOptionalContextManager = "none"
pythonVersion = "3.12"

[project]
name = "bot1"
version = "1.0.0"
description = "Telegram Bot with Jira Integration and Google Sheets support"
authors = [
    {name = "Bot Development Team", email = "dev@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["telegram", "bot", "jira", "google-sheets", "automation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Communications :: Chat",
    "Topic :: Office/Business :: Groupware",
]
dependencies = [
    "python-telegram-bot>=21.0",
    "jira>=3.4.0",
    "gspread>=5.9.0",
    "google-auth>=2.17.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.8.0",
    "asyncio-mqtt>=0.11.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0"
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0"
]

[project.urls]
Homepage = "https://github.com/euromixtgbot/bot1"
Repository = "https://github.com/euromixtgbot/bot1"
Issues = "https://github.com/euromixtgbot/bot1/issues"
Documentation = "https://github.com/euromixtgbot/bot1/blob/main/README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | venv
  | __pycache__
  | logs
  | backups
)/
'''

[tool.pytest.ini_options]
testpaths = ["Tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests"
]

[tool.mypy]
python_version = "3.12"
files = ["src", "config", "utils", "Tests", "scripts", "monitoring", "user_states"]
exclude = [
    "venv",
    "logs",
    "backups",
    "reports",
    "deployment"
]
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
